# teste_fa_maringa

./: .gitignore  README.md  _quarto.yml  app.py  pyproject.toml  requirements.txt
.quarto/xref/: 4e6f947e  INDEX
assets/: styles.css
notebooks/: 01_analise_nf.ipynb  02_analise_nfitem.ipynb  03_analise_faturamento.ipynb
pages/: 01_Visao_Geral.py  03_Produtos.py  04_Devolucoes.py  05_Empresas_Operacoes.py  06_Metodologia_Qualidade.py
reports/: README.md
reports/assets/: header.tex
reports/scripts/: prepare_publication.py  render_reports.sh  table_format.lua
reports/src/: 01_analise_exploratoria_nf.ipynb  02_analise_exploratoria_nfitem.ipynb  03_analise_faturamento.ipynb
scripts/: add_analise_principal_plots.py  build_faturamento_notebook.py  build_relatorio_faturamento.py
src/: __init__.py  charts.py  config.py  data_loader.py  data_validation.py  exceptions.py  filters.py  formatting.py  metrics.py  models.py  transformations.py  ui.py
tests/: conftest.py  test_data_loader.py  test_data_validation.py  test_filters.py  test_formatting.py  test_metrics.py  test_pages.py  test_transformations.py
