[project]
name = "famaringa"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Silva",email = "marcosilvam159@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.59.2,<2.0.0)",
    "plotly (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]
